# azure-sdk-trim

./: .gitignore  .sonarcloud.properties  LICENSE  Makefile  README.md  dev-requirements.txt  gray.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
azure_sdk_trim/: azure_sdk_trim.py
azure_sdk_trim/test/: test_azure_sdk_trim.py
